# tralens

./: .gitignore  ai.py  main.py  pyproject.toml  requirements.txt
src/: impainting.py  inpainting.py  ocr-surya.py  ocr.py  translate.py
