[project]
name = "tralens"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.6.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "surya-ocr>=0.17.1",
    "transformers<4.56.0",
]

[tool.uv]
override-dependencies = ["transformers<4.56.0"]
