[project]
name = "tralens"
version = "0.1.0"
description = "Tool to extract, translate, and replace text in an image"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "ollama>=0.6.1",
    "paddleocr[doc-parser]>=3.4.0",
    "paddlepaddle-gpu==3.3.0",
    "scikit-learn>=1.7.2",
]

[[tool.uv.index]]
name = "paddle-gpu-index"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu130/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle-gpu-index" }

